# ghc-hasfield-plugin

./: ghc-hasfield-plugin.cabal
src/Data/Record/Plugin/: HasFieldPattern.hs  Shim.hs
