cabal-version:      2.4
name:               ghc-hasfield-plugin
version:            0.1.1.0

library
  default-language: Haskell2010
  hs-source-dirs:
      src
  exposed-modules:
      Data.Record.Plugin.HasFieldPattern
  other-modules:
      Data.Record.Plugin.Shim
  build-depends:
      base >= 4.13
    , containers
    , mtl
    , transformers
    , primitive
    , uniplate
    , ghc
    , template-haskell

test-suite test
  default-language:
      Haskell2010
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test
  main-is:
      PluginTest.hs
  other-modules:
      TestTypes
      Unused
  build-depends:
      base             >= 4.13
    , record-hasfield
    , tasty
    , tasty-hunit
    , record-dot-preprocessor
    , ghc-hasfield-plugin
